--- a/index.html
+++ b/index.html
@@ -113,26 +113,46 @@
                   <nav class="navegation">
                     <p>CONTENIDO</p>
                     <div class="content-nav">
-                      <details open>
+                      <details open class="resetCounter">
                         <summary><p>Setup</p></summary>
                         <ol>
-                          <li><a href="#googleChorme">Google Chrome</a></li>
-                          <li><a href="#vsc">Visual Studio Code</a></li>
-                          <li><a href="#figma">Figma</a></li>
-                          <li><a href="#gitHub">GitHub</a></li>
+                          <li class="counterIncrement">
+                            <a href="#googleChorme">Google Chrome</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#vsc">Visual Studio Code</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#figma">Figma</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#gitHub">GitHub</a>
+                          </li>
                         </ol>
                       </details>
-                      <details open>
+                      <details open class="resetCounter">
                         <summary>
                           <p>Conceptos esenciales del Desarrollo Web</p>
                         </summary>
                         <ol>
-                          <li><a href="#html">Qué es HTML</a></li>
-                          <li><a href="#etiquetas">Etiquetas</a></li>
-                          <li><a href="#dom">DOM</a></li>
-                          <li><a href="#semantica">Semántica</a></li>
-                          <li><a href="#atributos">Atributos</a></li>
-                          <li><a href="#css">Qué es CSS</a></li>
+                          <li class="counterIncrement">
+                            <a href="#html">Qué es HTML</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#etiquetas">Etiquetas</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#dom">DOM</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#semantica">Semántica</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#atributos">Atributos</a>
+                          </li>
+                          <li class="counterIncrement">
+                            <a href="#css">Qué es CSS</a>
+                          </li>
                         </ol>
                       </details>
                     </div>
@@ -149,7 +169,7 @@
                 title="Logo de Google Chrome"
                 id="googleChorme"
               />
-              <h2>Google Chrome</h2>
+              <h2 class="counterIncrement">Google Chrome</h2>
               <p>
                 Chrome va a ser el navegador que utilizaremos en el curso por su
                 extenso soporte de nuevos estándares y herramientas de
@@ -161,7 +181,7 @@
                 title="Logo de Visual Studio Code"
                 id="vsc"
               />
-              <h2>Visual Studio Code</h2>
+              <h2 class="counterIncrement">Visual Studio Code</h2>
               <p>
                 Visual Studio Code es el editor de texto más popular y potente
                 del mercado actualmente, su fácil uso y la capacidad de
@@ -175,7 +195,7 @@
                 title="Logo de Figma"
                 id="figma"
               />
-              <h2>Figma</h2>
+              <h2 class="counterIncrement">Figma</h2>
               <p>
                 Figma es una la herramienta más popular en la actualidad para
                 entregar diseños a los desarrolladores para su implementación
@@ -188,7 +208,7 @@
                 title="Logo de GitHub"
                 id="gitHub"
               />
-              <h2>GitHub</h2>
+              <h2 class="counterIncrement">GitHub</h2>
               <p>
                 Así como en Facebook te encuentran tus amigos, en Github te
                 encuentran otras programadoras y programadores de todo el mundo,
@@ -203,10 +223,11 @@
               <p>“Este es el inicio de tu carrera como Desarrollador Web”</p>
               <p>Leonidas Esteban</p>
             </blockquote>
+            <!-- <hr /> -->
 
-            <section class="section conceptos">
+            <section class="section conceptos resetCounter">
               <h1>Conceptos esenciales del Desarrollo Web</h1>
-              <h2 id="html">HTML</h2>
+              <h2 id="html" class="counterIncrement">HTML</h2>
               <p>
                 Hyper Text Markup Language o Lenguaje de marcas Hipertexto. Es
                 el componente más básico de la web. Define el significado y la
@@ -228,7 +249,7 @@
 &lt;/html&gt;
 </pre
               >
-              <h2 id="etiquetas">Etiquetas</h2>
+              <h2 id="etiquetas" class="counterIncrement">Etiquetas</h2>
               <p>
                 Las etiquetas HTML van a ayudarnos a brindar una estructura y
                 semántica al contenido de nuestro website y cada una tiene
@@ -243,7 +264,7 @@
                 uso pero en este curso vamos a usar las más importantes y que
                 serán parte de tu día a día como Software Developer.
               </p>
-              <h2 id="dom">DOM</h2>
+              <h2 id="dom" class="counterIncrement">DOM</h2>
               <p>
                 El Document Object Model es una estructura de árbol que
                 representará todos nuestros proyectos web como si un árbol
@@ -257,7 +278,7 @@
                 alt="Estructura de arbol de cualquier proyeto Web"
                 title="Estructura de arbol de un proyecto Web"
               />
-              <h2 id="semantica">Sémantica</h2>
+              <h2 id="semantica" class="counterIncrement">Sémantica</h2>
               <p>
                 La semántica le brinda sentido a cada elemento existen en un
                 sitio web, algunos elementos será meramente decorativos y no
@@ -270,7 +291,7 @@
                 web, para que personas con habilidades diferentes puedan
                 entender cada contenido.
               </p>
-              <h2 id="atributos">Atributos</h2>
+              <h2 id="atributos" class="counterIncrement">Atributos</h2>
               <p>
                 Los atributos le dan características extra a las etiquetas para
                 complementar información y son pre programadas por el navegador,
@@ -278,7 +299,7 @@
                 forma como ‘class’ pero otros atributos funcionan en solo alguna
                 etiquetas como src
               </p>
-              <h2 id="css">CSS</h2>
+              <h2 id="css" class="counterIncrement">CSS</h2>
               <p>
                 Hojas de Estilo en Cascada (del inglés Cascading Style Sheets) o
                 CSS es el lenguaje de estilos utilizado para describir la
@@ -304,7 +325,9 @@
                 <li>Border / Bordes</li>
                 <li>Margin / Márgenes</li>
               </ol>
-              <h2>Propiedades físicas para el modelo de caja:</h2>
+              <h2 class="h2-64rem">
+                Propiedades físicas para el modelo de caja:
+              </h2>
               <ul>
                 <li>width / height</li>
                 <li>
@@ -320,7 +343,9 @@
                   padding-left
                 </li>
               </ul>
-              <h2>Propiedades lógicas para el modelo de caja:</h2>
+              <h2 class="h2-64rem">
+                Propiedades lógicas para el modelo de caja:
+              </h2>
               <ul>
                 <li>inline-size / block-size</li>
                 <li>
@@ -340,7 +365,7 @@
 
             <section>
               <div class="slider">
-                <h2>Modelo de caja</h2>
+                <h2 class="h2-64rem">Modelo de caja</h2>
                 <scroll-container class="slider-container">
                   <scroll-page class="slider-slide" id="video-1">
                     <iframe
